# PIM-attention

./: CMakeLists.txt  Makefile  Makefile.old  README.md  host.c  host.cpp
attention/: attention.c  attention.h  attention.hpp  dpu_set_context.c  dpu_set_context.cpp  dpu_set_context.h  host_util.cpp  host_util.h  kv_cache.h  kv_cache.hpp  token.h  token.hpp  vector.h  vector.hpp
dpu/: hello_world.c  kernal.c  kv_cache.c  kv_cache.h  mram_space_manage.h  op_k.c  op_k.h  op_norm.c  op_norm.h  op_v.c  op_v.h  shared_wram_vars.c  shared_wram_vars.h  test.c  test.h  vector.c  vector.h
host/: attention.c  attention.h  kv_cache.c  token.c  vector.c
model/: model.h
tests/: attention_cpu_test.cc  dpu_set_test.cc  vector_test.cc
util/: util.c  util.h
